--- a/app/src/main/res/layout/activity_add_note.xml
+++ b/app/src/main/res/layout/activity_add_note.xml
@@ -52,18 +52,18 @@
         android:gravity="top"
         android:inputType="text"
         android:padding="12dp"
-        android:text="Add Title..."
+        android:hint="Add Title..."
         android:textColor="#85A6FA" />
 
     <EditText
         android:id="@+id/contentEditText"
-        android:layout_width="330dp"
-        android:layout_height="446dp"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="220dp"
+        android:layout_width="340dp"
+        android:layout_height="552dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="220dp"
         android:layout_marginEnd="20dp"
         android:background="@drawable/orrange_border"
         android:ems="10"
@@ -71,6 +71,6 @@
         android:gravity="top"
         android:inputType="text"
         android:padding="12dp"
-        android:text="Add Discription..."
+        android:hint="Add Discription..."
         android:textColor="#85A6FA" />
 </RelativeLayout>
