--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,19 +13,19 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="30dp"
         android:fontFamily="@font/baloo_thambi"
-        android:textColor="#203DF8"
-        android:textSize="35dp"
+        android:textColor="@color/bl"
+        android:textSize="40dp"
         android:textStyle="bold"
-        android:layout_marginStart="20sp"
-        android:text="TextView" />
+        android:layout_marginStart="15sp"
+        android:text="Notes" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/notesRecyclerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="80dp"
+        android:layout_marginTop="70dp"
         android:padding="20dp"/>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
