--- a/app/src/main/res/layout/note_item.xml
+++ b/app/src/main/res/layout/note_item.xml
@@ -35,6 +35,15 @@
                 android:textColor="@color/bl"
                 android:textSize="18dp"
                 android:textStyle="bold" />
+            
+            <ImageView
+                android:id="@+id/updateButton"
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                android:layout_alignParentEnd="true"
+                android:layout_marginEnd="30px"
+                android:src="@drawable/edit"
+                />
 
         </RelativeLayout>
 
