--- a/app/src/main/res/layout/activity_update_note.xml
+++ b/app/src/main/res/layout/activity_update_note.xml
@@ -13,8 +13,8 @@
 
     <TextView
         android:id="@+id/editNoteheading"
-        android:layout_width="150dp"
-        android:layout_height="55dp"
+        android:layout_width="230dp"
+        android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_marginStart="20dp"
@@ -58,7 +58,7 @@
     <EditText
         android:id="@+id/updateContentEditText"
         android:layout_width="340dp"
-        android:layout_height="552dp"
+        android:layout_height="572dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
