--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,48 +1,47 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity"
-    >
+    android:background="@drawable/back3"
+    tools:context=".MainActivity">
+
     <TextView
         android:id="@+id/Notes"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
+        android:layout_marginStart="15sp"
         android:layout_marginTop="30dp"
         android:fontFamily="@font/baloo_thambi"
+        android:text="Notes"
         android:textColor="@color/bl"
         android:textSize="40dp"
-        android:textStyle="bold"
-        android:layout_marginStart="15sp"
-        android:text="Notes" />
+        android:textStyle="bold" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/notesRecyclerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="70dp"
-        android:padding="20dp"/>
+        android:padding="20dp" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/add_button"
-        android:layout_width="87dp"
-        android:layout_height="87dp"
+        android:layout_width="97dp"
+        android:layout_height="97dp"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
         android:layout_marginStart="166dp"
         android:layout_marginTop="166dp"
-        android:layout_marginEnd="44dp"
-        android:layout_marginBottom="47dp"
+        android:layout_marginEnd="27dp"
+        android:layout_marginBottom="112dp"
         android:backgroundTint="@color/bar"
         android:contentDescription="TODO"
         android:src="@drawable/baseline_add_24"
         app:tint="@color/white" />
-
 
 
 </RelativeLayout>
