--- a/app/src/main/res/layout/activity_update_note.xml
+++ b/app/src/main/res/layout/activity_update_note.xml
@@ -1,15 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/back2"
     android:orientation="vertical"
     android:padding="20dp"
-    tools:context=".UpdateNoteActivity"
 
-    >
+    tools:context=".UpdateNoteActivity">
 
     <TextView
         android:id="@+id/editNoteheading"
@@ -69,8 +68,8 @@
         android:ems="10"
         android:fontFamily="@font/baloo_bhai_2_medium"
         android:gravity="top"
+        android:hint="Update Discription..."
         android:inputType="text"
         android:padding="12dp"
-        android:hint="Update Discription..."
         android:textColor="#85A6FA" />
 </RelativeLayout>
